fixed alignments

--- a/css/style.css
+++ b/css/style.css
@@ -581,22 +581,22 @@ iframe {
   }
 
   .insta{
-    left: 5%;
-    top: -2%;
+    left: -3%;
+    top: 0%;
   }
 
   .fb{
-    left: -61%;
-    top: -83%;
+    left: 20%;
+    top: 20%;
   }
 
   .tiktok{
-    top: -84%;
-    left: 21%;
+    top: -83%;
+    left: -3%;
   }
 
   .nav-menu{
-    width: 15%;
+    width: 25%;
     padding-left: 20px;
   }
 
